--- a/airMonitor/static/map.css
+++ b/airMonitor/static/map.css
@@ -13,6 +13,9 @@
     color: black;
 }
 
+body{
+    background-color:powderblue;
+}
 /* Table fixed header and scrollable body */
 /* code from https://stackoverflow.com/questions/21168521/table-fixed-header-and-scrollable-body */
 .tableFixHead{
@@ -31,11 +34,8 @@ table{
 }
 th, td{
     padding: 8px 16px;
+    background:#eee;
 }
 th{
     background:#eee;
-}
-
-body{
-    background-color: rgb(235, 247, 252);
 }
