--- a/airMonitor/templates/airMonitor/sensor_SDS.html
+++ b/airMonitor/templates/airMonitor/sensor_SDS.html
@@ -145,7 +145,10 @@
 	<caption> <h1 style="text-align:center; color: black;"> Data Table </h1> </caption>
 	<canvas id="line-chart"></canvas>
 </div>
-
+<div class="container my-3 display" id="Charts">
+	<caption> <h1 style="text-align:center; color: black;"> Data Table </h1> </caption>
+	<canvas id="line-chartq"></canvas>
+</div>
 <!-- already put the link to base.html <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script> -->
 <script>
 	var config = {
@@ -171,6 +174,10 @@
 	};
 	window.onload = function() {
 		var ctx = document.getElementById('line-chart').getContext('2d');
+		window.myLine = new Chart(ctx, config);	
+	};
+	window.onload = function() {
+		var ctx = document.getElementById('line-chart2').getContext('2d');
 		window.myLine = new Chart(ctx, config);	
 	};
 </script>
