--- a/airMonitor/templates/airMonitor/sensor_SDS.html
+++ b/airMonitor/templates/airMonitor/sensor_SDS.html
@@ -147,7 +147,7 @@
 </div>
 <div class="container my-3 display" id="Charts">
 	<caption> <h1 style="text-align:center; color: black;"> Data Table </h1> </caption>
-	<canvas id="line-chartq"></canvas>
+	<canvas id="line-chart2"></canvas>
 </div>
 <!-- already put the link to base.html <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script> -->
 <script>
@@ -156,7 +156,7 @@
 		data: {
 			datasets: [{
 				data: {{ p1List|safe }},
-				borderColor: 'gold',
+				borderColor: 'red',
 				backgroundColor: "rgba(0,0,0,0)",
 				label: 'P1'
 			}],
@@ -169,9 +169,9 @@
 	var config2 = {
 		type: 'line',
 		data: {
-			{
+			datasets: [{
 				data: {{ p2List|safe }},
-				borderColor: 'silver',
+				borderColor: 'blue',
 				backgroundColor: "rgba(0,0,0,0)",
 				label: 'P2'
 			}],
