--- a/airMonitor/templates/airMonitor/sensor_SDS.html
+++ b/airMonitor/templates/airMonitor/sensor_SDS.html
@@ -141,13 +141,15 @@
 
 <!-- Container 2(3): Charts -->
 <!-- Chart 1: P1 and P2 -->
-<div class="container my-3 display" id="Charts">
-	<caption> <h1 style="text-align:center; color: black;"> Data Table </h1> </caption>
-	<canvas id="line-chart"></canvas>
-</div>
-<div class="container my-3 display" id="Charts">
-	<caption> <h1 style="text-align:center; color: black;"> Data Table </h1> </caption>
-	<canvas id="line-chart2"></canvas>
+<div id="Charts">
+	<div class="container my-3 display">
+		<caption> <h1 style="text-align:center; color: black;"> Data Table </h1> </caption>
+		<canvas id="line-chart"></canvas>
+	</div>
+	<div class="container my-3 display">
+		<caption> <h1 style="text-align:center; color: black;"> Data Table </h1> </caption>
+		<canvas id="line-chart2"></canvas>
+	</div>
 </div>
 <!-- already put the link to base.html <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script> -->
 <script>
