--- a/airMonitor/templates/airMonitor/base.html
+++ b/airMonitor/templates/airMonitor/base.html
@@ -7,6 +7,9 @@
 
     <title> {% block title %} {% endblock %} </title>
 
+    <!-- favicon icon -->
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon1.ico' %}">
+	
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -31,12 +34,13 @@
         <div class="container p-2">
 
             <!-- logo -->
-            <a class="navbar-brand text-primary" href=""> LOGO 
-                <!-- if an image for logo 
-                <img src="https://content.thriveglobal.com/wp-content/uploads/2019/02/GettyImages-868644174.jpg" alt="Logo" 
-                    style="width:40px;" class="rounded"> -->
+	    <div class="logo">
+            <a class="navbar-brand" href="https://echo-air-sensor.herokuapp.com"> 
+                <!-- if an image for logo -->
+                <img src="https://www.airaberdeen.org/wp-content/uploads/2020/07/cropped-hex-wind-header-2.png" alt="Logo" style="width:150px;" class="rounded-pill">
             </a> 
-
+            </div>
+		
             <!-- collapsible navigation bar for links -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#links" style="border-color: white;">
                 <span class="navbar-toggler-icon"></span>
@@ -56,16 +60,6 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/comparisons" name="comparisonLink"> Comparisons </a>
                     </li>
-                    
-                    <!-- others 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"> More </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href=""> 11 </a></li>
-                            <li><a class="dropdown-item" href=""> 22 </a></li>
-                            <li><a class="dropdown-item" href=""> 33 </a></li>
-                        </ul>
-                    </li> -->
                 </ul>
             </div>
         </div>
@@ -75,8 +69,8 @@
     {% block content %}
     {% endblock %} 
 
-    <footer class="mt-auto p-3 text-center" style="background-color: lightgrey;"> 
-        ECHO 2022 
+    <footer class="mt-auto p-3 mt-3 text-center text-white" style="background-color: black;"> 
+       @ ECHO 2022 
     </footer>
 
 
