--- a/airMonitor/templates/airMonitor/base.html
+++ b/airMonitor/templates/airMonitor/base.html
@@ -1,3 +1,4 @@
+{% load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -35,7 +36,7 @@
 
             <!-- logo -->
 	    <div class="logo">
-            <a class="navbar-brand" href="https://echo-air-sensor.herokuapp.com"> 
+            <a class="navbar-brand" href="/"> 
                 <!-- if an image for logo -->
                 <img src="https://www.airaberdeen.org/wp-content/uploads/2020/07/cropped-hex-wind-header-2.png" alt="Logo" style="width:150px;" class="rounded-pill">
             </a> 
