--- a/airMonitor/templates/airMonitor/base.html
+++ b/airMonitor/templates/airMonitor/base.html
@@ -62,8 +62,13 @@
                 <li class="nav-item">
                     <a class="nav-link text-white links" href="/comparisons" name="comparisonLink"> Comparisons </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white links" href="/FAQs" name="FAQs"> FAQs </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white links" href="/User_guide" name="User_guide"> Help </a>
+                </li>           
             </ul>
-
         </div>
         
     </nav>
